# StartMenuButtonHider

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
StartMenuButtonHider/: CMakeLists.txt  StartMenuButtonHider.cpp
StartMenuButtonHider_Win7/: CMakeLists.txt  StartMenuButtonHider_Win7.cpp  StartMenuButtonHider_Win7.h
